--- a/src/index.css
+++ b/src/index.css
@@ -73,65 +73,56 @@ main {
   border-radius: 5px;
 } */
 
-
+/* .rounded{
+  height: 130px;
+  width: 130px;
+  background-color: black;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+h1{
+  color: aliceblue;
+} */
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  font-family: 'Inter', sans-serif;
-  background-color: #262626;
-  color: #D9D9D9;
+  background-color: #70B85D;
+  color: white;
   padding: 20px;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-family: 'Karla', sans-serif;
+  font-size: 1.3rem;
 }
 
-.counter {
-  display: flex;
-  align-items: flex-end;
-}
-
-.counter > button {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  border: none;
+button {
+  width:40vw;
+  
+  background-color: transparent;
+  padding: 1rem;
+  color: white;
+  border: 2px solid white;
+  border-radius: 50px;
   cursor: pointer;
-  background-color: #737373;
-  color: #D9D9D9;
+  font-family: 'Karla', sans-serif;
+  margin-bottom: 20px;
   font-size: 1.5rem;
 }
 
-.counter > button:hover {
-  background-color: #404040;
-  color: #D9D9D9;
+button:hover {
+  background-color: #FFFEF1;
+  color: #2C5E2E;
 }
 
-.counter > button:focus {
-  outline: none;
+button:focus {
+  outline: 0;
 }
 
-.counter--count {
-  background-color: white;
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #262626;
-}
-
-.counter--plus {
-  margin-left: -20px;
-}
-
-.counter--minus {
-  margin-right: -20px;
-  z-index: 1;
+@media(max-width:425px){
+  button{
+    width: 100%;
+  }
 }
