--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* * {
+* {
   box-sizing: border-box;
 }
 
@@ -15,7 +15,7 @@ main {
   margin: auto;
 }
 /* HEADER */
-/* .header {
+.header {
   display: flex;
   align-items: center;
   height: 70px;
@@ -38,9 +38,9 @@ main {
   margin-right: 30px;
   font-size: 1.25rem;
   font-weight: 500;
-} */
+} 
 
-/* MEME *//*
+/* MEME */
 .form {
   display: grid;
   grid-template: 40px 40px /1fr 1fr;
@@ -71,58 +71,24 @@ main {
   margin-top: 100px;
   width: 100%;
   border-radius: 5px;
-} */
+} 
 
-/* .rounded{
-  height: 130px;
-  width: 130px;
-  background-color: black;
-  border-radius: 50%;
+
+
+
+.counter{
   display: flex;
   justify-content: center;
   align-items: center;
 }
-h1{
-  color: aliceblue;
-} */
-
-* {
-  box-sizing: border-box;
+.counter--count{
+  margin: 10px;
 }
-
-body {
-  background-color: #70B85D;
+button{
+  padding: .5rem 1rem;
+  border: none;
+  background-color: green;
+  border-radius: 5px;
   color: white;
-  padding: 20px;
-  font-family: 'Karla', sans-serif;
-  font-size: 1.3rem;
-}
-
-button {
-  width:40vw;
-  
-  background-color: transparent;
-  padding: 1rem;
-  color: white;
-  border: 2px solid white;
-  border-radius: 50px;
-  cursor: pointer;
-  font-family: 'Karla', sans-serif;
-  margin-bottom: 20px;
-  font-size: 1.5rem;
-}
-
-button:hover {
-  background-color: #FFFEF1;
-  color: #2C5E2E;
-}
-
-button:focus {
-  outline: 0;
-}
-
-@media(max-width:425px){
-  button{
-    width: 100%;
-  }
+  font-size:1rem;
 }
